- fixed table layout issue in further cases
git-svn-id: svn://bar.ebi.ac.uk/trunk/arrayexpress-interface@23368 2913f559-6b04-0410-9a09-c530ee9f5186

--- a/webapp/src/main/webapp/assets/stylesheets/ae-experiment-samples-1.0.130402.css
+++ b/webapp/src/main/webapp/assets/stylesheets/ae-experiment-samples-1.0.130402.css
@@ -148,6 +148,9 @@
 #ae-results .ae_samples_table td.right_fixed {
     vertical-align: top;
 }
+#ae-results table.w100pc {
+    width: 100% !important
+}
 
 #ae-results th {
     font-size: 108%;
